--- a/apps/docs/pages/examples/component-with-props.mdx
+++ b/apps/docs/pages/examples/component-with-props.mdx
@@ -1,10 +1,10 @@
-import { DynamicLiveCodeSandPack } from "@components/DynamicLiveCodeSandPack";
+import { DynamicLiveCodeSandpack } from "@components/DynamicLiveCodeSandpack";
 
 ### Component with Props
 
 React Unforget can trace statements that will mutate a variable.
 
-<DynamicLiveCodeSandPack>
+<DynamicLiveCodeSandpack>
 {`import { useState } from "react";
 
 function InnerComponentWithProps({ count, text }) {
@@ -35,4 +35,4 @@ export default function CounterWithInnerComponents() {
 }
 `}
 
-</DynamicLiveCodeSandPack>
+</DynamicLiveCodeSandpack>
