--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -2,13 +2,13 @@
 title: "Home"
 ---
 
-import { DynamicLiveCodeSandPack } from "@components/DynamicLiveCodeSandPack";
+import { DynamicLiveCodeSandpack } from "@components/DynamicLiveCodeSandpack";
 
 # React Unforget
 
 React, despite its dominance, has shown signs of lagging in raw performance and bundle size when compared to efficient frameworks like Svelte. **React Unforget** aims to bridge this gap with intelligent memoization and optimization strategies.
 
-<DynamicLiveCodeSandPack previewClassName="h-44">
+<DynamicLiveCodeSandpack previewClassName="h-44">
 {`import { useState } from "react";
 
 export default function CounterWithMutationTracking() {
@@ -32,7 +32,7 @@ return (
 </div>
 ); } `}
 
-</DynamicLiveCodeSandPack>
+</DynamicLiveCodeSandpack>
 
 Dive into the [collection of examples](./examples.mdx) and documentation to see React Unforget in action.
 
