--- a/apps/docs/pages/examples/counter-with-mutated-dependency.mdx
+++ b/apps/docs/pages/examples/counter-with-mutated-dependency.mdx
@@ -1,32 +1,31 @@
-import { DynamicLiveCodeSandPack } from "@components/DynamicLiveCodeSandPack";
+import { DynamicLiveCodeSandpack } from "@components/DynamicLiveCodeSandpack";
 
 ### Counter with Mutation Tracking
 
 React Unforget can trace statements that will mutate a variable.
 
-<DynamicLiveCodeSandPack>
+<DynamicLiveCodeSandpack>
 {`import { useState } from "react";
 
 export default function CounterWithMutationTracking() {
   const [state, setState] = useState(0);
 
-  let text = "The number is: ";
+let text = "The number is: ";
 
-  if (state % 2 === 0) {
-    text += "even";
-  } else {
-    text += "odd";
-  }
-
-  return (
-    <div>
-      <button onClick={() => setState(state + 1)}>Increment</button>
-      <div>
-        <span>Count: {state}</span> {text}
-      </div>
-    </div>
-  );
+if (state % 2 === 0) {
+text += "even";
+} else {
+text += "odd";
 }
-`}
 
-</DynamicLiveCodeSandPack>
+return (
+
+<div>
+  <button onClick={() => setState(state + 1)}>Increment</button>
+  <div>
+    <span>Count: {state}</span> {text}
+  </div>
+</div>
+); } `}
+
+</DynamicLiveCodeSandpack>
