--- a/apps/docs/pages/examples/simple-counter.mdx
+++ b/apps/docs/pages/examples/simple-counter.mdx
@@ -1,10 +1,10 @@
-import { DynamicLiveCodeSandPack } from "@components/DynamicLiveCodeSandPack";
+import { DynamicLiveCodeSandpack } from "@components/DynamicLiveCodeSandpack";
 
 ### Simple Counter App
 
 React Unforget automatically finds any variables referenced in the JSX and allocates a space form them in the cache. Then adds proper code in place to use and update the cache and minimizes the re-renders.
 
-<DynamicLiveCodeSandPack previewClassName="h-40">
+<DynamicLiveCodeSandpack previewClassName="h-40">
 {`import { useState } from "react";
 
 export default function Counter() {
@@ -19,4 +19,4 @@ export default function Counter() {
     </div>
   );
 }`}
-</DynamicLiveCodeSandPack>
+</DynamicLiveCodeSandpack>
