docs: Update the main page text

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -6,7 +6,7 @@ import { DynamicLiveCodeSandpack } from "@components/DynamicLiveCodeSandpack";
 
 # React Unforget
 
-React, despite its dominance, has shown signs of lagging in raw performance and bundle size when compared to efficient frameworks like Svelte. **React Unforget** aims to bridge this gap with intelligent memoization and optimization strategies.
+React Unforget is a project inspired by the principles of React Forget, designed to streamline and optimize React component rendering. The mission of React Unforget is to enhance the performance of React applications as well as developer experience by automating the memoization process, making it unnecessary to manually use `useMemo` or `useCallback`.
 
 <DynamicLiveCodeSandpack previewClassName="h-44">
 {`import { useState } from "react";
