docs: Fix a typo

--- a/apps/docs/pages/comparisons/forgetti.mdx
+++ b/apps/docs/pages/comparisons/forgetti.mdx
@@ -37,7 +37,7 @@ export default function CounterWithMutationTracking() {
 
 </DynamicLiveCodeSandpack>
 
-Yay 🎉! It worked. Now let's make it a bit more complex. Remember the example from the home page of Unforget? Let's make the test mutable.
+Yay 🎉! It worked. Now let's make it a bit more complex. Remember the example from the home page of Unforget? Let's make the `text` value mutable.
 
 
 ```ts
